Fix horizontal scrolling in Code block

--- a/packages/sass-variables/_typography.scss
+++ b/packages/sass-variables/_typography.scss
@@ -217,6 +217,7 @@ $puppet-type-code-small-font-weight: $puppet-type-weight-normal !default;
   font-size: $puppet-type-code-font-size;
   font-weight: $puppet-type-code-font-weight;
   line-height: $puppet-type-code-line-height;
+  overflow-y: scroll;
 }
 
 @mixin puppet-type-code-small() {
@@ -228,7 +229,7 @@ $puppet-type-code-small-font-weight: $puppet-type-weight-normal !default;
 
 @mixin puppet-type-code-block() {
   background-color: $puppet-n100;
-  box-shadow: inset 8px 0 0 #e4e9ed;
+  border-left: 8px solid $puppet-n300;
   display: block;
   padding: $puppet-common-spacing-base * 3 $puppet-common-spacing-base * 6;
   white-space: pre;
